[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/encyclopedia_entry_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/backgrounds/wyrmsun_sepia.png" type="Texture" id=3]
[ext_resource path="res://scenes/menu_area.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/text_with_shadow.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/icon_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/berenika_14.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/large_button.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/shortcuts/shortcut_p.tres" type="ShortCut" id=9]
[ext_resource path="res://scripts/change_scene_button.gd" type="Script" id=10]

[node name="encyclopedia_entry_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" parent="." instance=ExtResource( 2 )]
texture = ExtResource( 3 )

[node name="menu_area" parent="." instance=ExtResource( 4 )]

[node name="menu_title" parent="menu_area" instance=ExtResource( 5 )]
anchor_right = 1.0
margin_top = 32.0
margin_right = 0.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 1218, 32 )
bbcode_text = "[center][color=#f4e020]Encyclopedia[/color][/center]"
text = "Encyclopedia"

[node name="entry_icon_button" parent="menu_area" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = 68.0
margin_right = 27.0
margin_bottom = -186.0

[node name="entry_description" parent="menu_area" instance=ExtResource( 5 )]
anchor_right = 1.0
margin_left = 32.0
margin_top = 140.0
margin_right = -32.0
margin_bottom = 500.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_text = "Entry Description"
text = "Entry Description"

[node name="previous_menu_button" parent="menu_area" instance=ExtResource( 8 )]
margin_left = 208.0
margin_top = 536.0
margin_right = 432.0
margin_bottom = 564.0
shortcut = ExtResource( 9 )
script = ExtResource( 10 )
button_text = "~!Previous Menu"
target_scene = "encyclopedia_icon_entries_menu"

